<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/foodsFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.presentation.features.main.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile" />

    <!--<fragment
        android:id="@+id/productListFragment"
        android:name="com.example.market.presentation.productList.ProductListFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_product_list" />-->
    <fragment
        android:id="@+id/foodsFragment"
        android:name="com.example.presentation.features.product.list.FoodsFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_foods" />

    <fragment
        android:id="@+id/cardFragment"
        android:name="com.example.presentation.features.cart.CartFragment"
        android:label="@string/fragment_card"
        tools:layout="@layout/fragment_cart" />

</navigation>