<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/vazir_medium"
        android:text="@string/please_submit_code"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:gravity="right"
        android:hint="@string/verificationCode"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/verifyCodeLength"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TitleTextView">
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_medium"
            android:inputType="number"
            android:maxLength="@integer/verifyCodeLength"
            android:singleLine="true"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:enabled="false"
        android:fontFamily="@font/vazir_medium"
        android:text="@string/continuation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_edit_text" />

    <Button
        android:id="@+id/retrySendCodeBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:enabled="false"
        android:textSize="12sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:fontFamily="@font/vazir_medium"
        android:text="@string/continuation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_edit_text" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/submitCodeBtn"
        app:layout_constraintLeft_toLeftOf="@id/submitCodeBtn"
        app:layout_constraintRight_toRightOf="@id/submitCodeBtn"
        app:layout_constraintTop_toTopOf="@id/submitCodeBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>